--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <title>Multitasking Website</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="bucket-list.css">
+    <link rel="stylesheet" href="news-card.css">
+    <link rel="stylesheet" href="calculator-card.css">
+    <link rel="stylesheet" href="calendar-card.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
 </head>
 <body>
+<div class="card-pack" id="cardPack">
     <div class="bucket-list-card card">
+        <div>
+        <h1>To-Do List</h1>
+    </div>
         <div class="add-task">
                 <input id="inputField" type="text" placeholder="Add a new task" spellcheck="false">
                 <button id="addToDo"><img src="images/comment-regular.png"></button>
@@ -18,9 +25,13 @@
             <ul id="toDoItem"></ul>
         </div>
     </div>
+    <div class="news-card card">
+        <div><h1>News</h1></div>
+    </div>
     <div class="weather-card card">
+        <div><h1>Weather App</h1></div>
         <div class="search">
-            <input type="text" placeholder="enter city name" spellcheck="false">
+            <input type="text" placeholder="Enter city name" spellcheck="false">
             <button><img src="images/search.png"></button>
         </div>
         <div class="error">
@@ -48,10 +59,40 @@
             </div>
         </div>
     </div>
+    <div class="calendar-card card">
+        <div><h1>Calendar</h1></div>
+    </div>
+    <div class="calculator-card card">
+        <div><h1>Calculator</h1></div>
+        <div class="calculator-full">
+            <div class="calculator-buttons">
+                <button class="plus">+</button>
+                <button class="minus">-</button>
+                <button class="multiplication">x</button>
+                <button class="division">:</button>
+                <button class="n7">7</button>
+                <button class="n8">8</button>
+                <button class="n9">9</button>
+                <button class="n4">4</button>
+                <button class="n5">5</button>
+                <button class="n6">6</button>
+                <button class="n1">1</button>
+                <button class="n2">2</button>
+                <button class="n3">3</button>
+                <button class="n0">0</button>
+                <button class="dot">.</button>
+                <button class="clear">C</button>
+                <button class="equal">=</button>
+            </div>
+        </div>
+    </div>
+</div>
 
     <script src="weather-app.js">
     </script>
 
     <script src="bucket-list.js"></script>
+    <script src="animations.js"></script>
+    <script src="calculator-app.js"></script>
 </body>
 </html>
